// Vitest Snapshot v1

exports[`shortcuts > animate 1`] = `
"/* layer: shortcuts */
.loading{animation:spin 1s linear infinite;transition-duration:1000ms;}
/* layer: default */
@keyframes spin{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}"
`;

exports[`shortcuts > dynamic 1`] = `
"/* layer: shortcuts */
.button-1{padding-left:0.75rem;padding-right:0.75rem;padding-top:0.5rem;padding-bottom:0.5rem;}
.button-2{padding-left:1.5rem;padding-right:1.5rem;padding-top:1rem;padding-bottom:1rem;}"
`;

exports[`shortcuts > merge transform-duplicated 1`] = `
"/* layer: shortcuts */
.transform-duplicated {
  --un-translate-x: 0.25rem;
  transform: translateX(var(--un-translate-x)) translateY(var(--un-translate-y))
    translateZ(var(--un-translate-z)) rotate(var(--un-rotate))
    rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y))
    rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y))
    scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y))
    scaleZ(var(--un-scale-z));
  --un-translate-y: 0.5rem;
  --un-scale-x: 0.04;
  --un-scale-y: 0.04;
}
.transform-duplicated:hover {
  --un-scale-x: 0.02;
  --un-scale-y: 0.02;
  transform: translateX(var(--un-translate-x)) translateY(var(--un-translate-y))
    translateZ(var(--un-translate-z)) rotate(var(--un-rotate))
    rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y))
    rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y))
    scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y))
    scaleZ(var(--un-scale-z));
}
.transform-duplicated:active {
  --un-scale-x: 0.04;
  transform: translateX(var(--un-translate-x)) translateY(var(--un-translate-y))
    translateZ(var(--un-translate-z)) rotate(var(--un-rotate))
    rotateX(var(--un-rotate-x)) rotateY(var(--un-rotate-y))
    rotateZ(var(--un-rotate-z)) skewX(var(--un-skew-x)) skewY(var(--un-skew-y))
    scaleX(var(--un-scale-x)) scaleY(var(--un-scale-y))
    scaleZ(var(--un-scale-z));
}
"
`;

exports[`shortcuts > nesting static 1`] = `
"/* layer: shortcuts */
.btn2{margin:0.75rem;margin-left:2.5rem;margin-right:2rem;padding-left:0.5rem;padding-right:0.5rem;padding-top:0.75rem;padding-bottom:0.75rem;}
.btn{margin-right:2rem;}
.btn1{margin-left:2.5rem;margin-right:2rem;}
@media (min-width: 640px){
.btn2{margin:0.5rem;}
}"
`;

exports[`shortcuts > no-merge 1`] = `
"/* layer: default */
.merge-candidate,
.with-no-merge{merged:1;}
.with-no-merge{no-merge:1;}"
`;

exports[`shortcuts > shortcut of nested pseudo 1`] = `
"/* layer: shortcuts */
.btn3:focus,
.focus\\\\:btn3:focus:focus,
.focus\\\\:hover\\\\:btn3:focus:hover:focus,
.hover\\\\:btn3:focus:hover{border-width:1px;}
.btn3,
.focus\\\\:btn3:focus,
.focus\\\\:hover\\\\:btn3:hover:focus,
.hover\\\\:btn3:hover{--un-bg-opacity:1;background-color:rgba(255,255,255,var(--un-bg-opacity));--un-text-opacity:1;color:rgba(154,52,18,var(--un-text-opacity));}
.btn3:hover,
.focus\\\\:btn3:hover:focus,
.focus\\\\:hover\\\\:btn3:hover:hover:focus,
.hover\\\\:btn3:hover:hover{--un-bg-opacity:1;background-color:rgba(0,0,0,var(--un-bg-opacity));--un-text-opacity:1;color:rgba(21,94,117,var(--un-text-opacity));text-decoration-line:underline;}"
`;

exports[`shortcuts > shortcut with inline body 1`] = `
"/* layer: shortcuts */
.hover\\\\:shortcut-inline-body:hover,
.shortcut-inline-body{padding:0.5rem;margin:3px;}
.shortcut-inline-dynamic-1{padding:0.25rem;margin:1px;}
.shortcut-inline-dynamic-2{padding:0.5rem;margin:2px;}"
`;

exports[`shortcuts > static 1`] = `
"/* layer: shortcuts */
.sh1{margin:0.75rem;padding-left:0.5rem;padding-right:0.5rem;padding-top:0.75rem;padding-bottom:0.75rem;}
.sh3{margin:0.75rem;}
.focus\\\\:sh2:focus,
.sh2{font-size:0.875rem;line-height:1.25rem;font-size:1.125rem;line-height:1.75rem;}
.focus\\\\:sh2:hover:focus,
.sh2:hover{font-size:1.125rem;line-height:1.75rem;}
@media (min-width: 640px){
.sh1,
.sh3{margin:0.5rem;}
}"
`;

exports[`shortcuts > variant order 1`] = `
"/* layer: shortcuts */
.shortcut-hover-active-1:focus,
.shortcut-hover-active-1:hover{--un-bg-opacity:1;background-color:rgba(134,239,172,var(--un-bg-opacity));}
.shortcut-hover-active-1:active{--un-bg-opacity:1;background-color:rgba(134,239,172,var(--un-bg-opacity));}"
`;

exports[`shortcuts > variant order 2`] = `
"/* layer: shortcuts */
.shortcut-hover-active-2:focus{--un-bg-opacity:1;background-color:rgba(252,165,165,var(--un-bg-opacity));}
.shortcut-hover-active-2:hover{--un-bg-opacity:1;background-color:rgba(253,224,71,var(--un-bg-opacity));}
.shortcut-hover-active-2:active{--un-bg-opacity:1;background-color:rgba(147,197,253,var(--un-bg-opacity));}"
`;

exports[`shortcuts > variant order 3`] = `
"/* layer: shortcuts */
.shortcut-hover-active-2:focus,
.uno-layer-shortcuts\\\\:bg-red-300{--un-bg-opacity:1;background-color:rgba(252,165,165,var(--un-bg-opacity));}
.shortcut-hover-active-2:hover{--un-bg-opacity:1;background-color:rgba(253,224,71,var(--un-bg-opacity));}
.shortcut-hover-active-2:active{--un-bg-opacity:1;background-color:rgba(147,197,253,var(--un-bg-opacity));}"
`;

exports[`shortcuts > variant order 4`] = `
"/* layer: shortcuts */
.shortcut-hover-active-2:focus{--un-bg-opacity:1;background-color:rgba(252,165,165,var(--un-bg-opacity));}
.shortcut-hover-active-2:hover,
.uno-layer-shortcuts\\\\:bg-yellow-300{--un-bg-opacity:1;background-color:rgba(253,224,71,var(--un-bg-opacity));}
.shortcut-hover-active-2:active{--un-bg-opacity:1;background-color:rgba(147,197,253,var(--un-bg-opacity));}"
`;

exports[`shortcuts > variant order 5`] = `
"/* layer: shortcuts */
.shortcut-hover-active-2:focus{--un-bg-opacity:1;background-color:rgba(252,165,165,var(--un-bg-opacity));}
.shortcut-hover-active-2:hover{--un-bg-opacity:1;background-color:rgba(253,224,71,var(--un-bg-opacity));}
.uno-layer-shortcuts\\\\:bg-blue-300{--un-bg-opacity:1;background-color:rgba(147,197,253,var(--un-bg-opacity));}
.shortcut-hover-active-2:active{--un-bg-opacity:1;background-color:rgba(147,197,253,var(--un-bg-opacity));}"
`;
